--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,15 +1,13 @@
 .grid {
     display: grid;
-    grid-template-columns: 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px;
-    gap: 0px;
-    width: 50%;
-    div {
-        width: 100%;
-        height: 100%;
-        border: 2px solid black;
-        text-align: center;
-        align-self: center;
-        justify-self: center;
-    }
+    grid-template-columns: repeat(3, 128px);
+    grid-template-rows: repeat(3, 128px);
+    gap: 5px;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
