--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
+@import 'themes';
+
+@import '~@nebular/theme/styles/globals';
+
+@include nb-install() {
+  @include nb-theme-global();
+};
 /* You can add global styles to this file, and also import other style files */
+.nb-theme-cosmic nav {
+  box-shadow: none;
+}
