--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <nb-layout>
 
-  <nb-layout-header fixed style="display: flex; align-items: center; justify-content: center;">
+  <nb-layout-header>
     <!-- Insert header here -->
-    <h1>TIC TAC TOE</h1>
+    <div class="text-center">
+      <h1>TIC TAC TOE</h1>
+    </div>
   </nb-layout-header>
 
   <nb-layout-column>
